--- a/Geom Calculator 2.0/main.css
+++ b/Geom Calculator 2.0/main.css
@@ -1377,9 +1377,9 @@ designs for features page
     padding-left: 7rem;
   }
 
-  #rc-exp-op {
+/*   #rc-exp-op {
     padding-bottom: 2rem;
-  }
+  } */
 }
 
 @media screen and (min-width: 1026px){
